--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     />
   </head>
   <body>
+    <header>
+      <img src="images/logo.png" alt="Oldagram logo." class="logo" />
+      <img src="images/user-avatar.png" alt="User avatar." class="avatar" />
+    </header>
+    <main></main>
     <script src="script.js"></script>
   </body>
 </html>
